# DiscordClone

./: CMakeLists.txt
client/: CMakeLists.txt  ChatClient.cpp  greeter_client.cc
client/domain/: commandProcessor.cpp
contract/: chat.proto  helloworld.proto
server/: CMakeLists.txt  ChatServiceImpl.cpp  greeter_server.cc
server/domain/: channel.cpp  messages.cpp  server.cpp  serverState.cpp
